deploy/network/allow-to-api-github-com.yaml
# Generated by vikrant v0.1.0 from service.yaml. Do not edit: platform-owned.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: echo
    app.kubernetes.io/managed-by: vikrant
  name: allow-to-api-github-com
  namespace: echo
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
  podSelector:
    matchLabels:
      app: echo
  policyTypes:
  - Egress
